--- a/website/static/css/docsearch.css
+++ b/website/static/css/docsearch.css
@@ -127,7 +127,7 @@
 
 @media (max-width: 736px) {
     .ds-dropdown-menu {
-        width: 100%;
+        width: 85%;
     }
 
     .ds-dataset-1 {
